# pytest-playwright-axe

./: .gitignore  README.md  pyproject.toml  pytest.ini  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: axe-dependency-check.yaml  axe-dependency-update.yaml  build.yaml  check-axe-version.yaml  python-check-code.yml  python-package.yml  python-publish.yml
examples/: example_result_report.html  example_result_report.json
pytest_playwright_axe/: __init__.py  axe.py
scripts/: check_axe_core_version.py
src/: axe.py
src/pytest_playwright_axe/: __init__.py  axe.py
src/pytest_playwright_axe/resources/: axe.js  axe.min.js  default.css
tests/: test_axe.py  test_example.py
tests/snapshots/: corrupt.json  github_com_davethepunkyone_pytest-playwright-axe.json
