[metadata]
name = pytest-playwright-axe
version = 0.0.1
author = Dave Harding
author_email = dave@punkamania.org
description = An axe-core integration for use with Playwright Python.
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/davethepunkyone/pytest-playwright-axe/issues
    repository = https://github.com/davethepunkyone/pytest-playwright-axe
url = https://github.com/davethepunkyone/pytest-playwright-axe
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: pygame
    Framework :: Pytest
    Development Status :: 4 - Beta

[options]
packages = find:
python_requires = >=3.12
include_package_data = False
install_requires =
    pytest-playwright>=0.5.1
